vemo-app/main/default/objects/Bill__c/fields/AccountCredit__c.field-meta.xml
<CustomField>
    <fullName>AccountCredit__c</fullName>
    <label>Account Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>