vemo-app/main/default/objects/Bill__c/fields/ExpectedPayment__c.field-meta.xml
<CustomField>
    <fullName>ExpectedPayment__c</fullName>
    <label>Expected Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>