vemo-app/main/default/objects/Bill__c/fields/FeesDue__c.field-meta.xml
<CustomField>
    <fullName>FeesDue__c</fullName>
    <label>Fees Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>