vemo-app/main/default/objects/Bill__c/fields/SendStatement__c.field-meta.xml
<CustomField>
    <fullName>SendStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Statement</label>
    <type>Checkbox</type>
</CustomField>