vemo-app/main/default/objects/Bill__c/fields/StatementData__c.field-meta.xml
<CustomField>
    <fullName>StatementData__c</fullName>
    <label>Statement Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>