vemo-app/main/default/objects/Bill__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Bills</relationshipName>
    <type>Lookup</type>
</CustomField>