vemo-app/main/default/objects/Bill__c/fields/TotalAmountCurrentDue__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountCurrentDue__c</fullName>
    <label>Total Amount Current Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>