vemo-app/main/default/objects/Bill__c/fields/TotalAmountDue__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountDue__c</fullName>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>