vemo-app/main/default/objects/Bill__c/fields/TotalAmountPastDue__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountPastDue__c</fullName>
    <label>Total Amount Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>