vemo-app/main/default/objects/Bill__c/fields/TotalMonthlyAmountCurrentDue__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyAmountCurrentDue__c</fullName>
    <label>Total Monthly Amount Current Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>