vemo-app/main/default/objects/Bill__c/fields/TotalMonthlyAmountDue__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyAmountDue__c</fullName>
    <label>Total Monthly Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>