vemo-app/main/default/objects/Bill__c/fields/TotalMonthlyAmountPastDue__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyAmountPastDue__c</fullName>
    <label>Total Monthly Amount Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>