vemo-app/main/default/objects/Bill__c/fields/TotalReconciliationCurrentDue__c.field-meta.xml
<CustomField>
    <fullName>TotalReconciliationCurrentDue__c</fullName>
    <label>Total Reconciliation Current Due16</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>