vemo-app/main/default/objects/Bill__c/fields/TotalReconciliationDue__c.field-meta.xml
<CustomField>
    <fullName>TotalReconciliationDue__c</fullName>
    <label>Total Reconciliation Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>