vemo-app/main/default/objects/Bill__c/fields/TotalReconciliationPastDue__c.field-meta.xml
<CustomField>
    <fullName>TotalReconciliationPastDue__c</fullName>
    <label>Total Reconciliation Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>