vemo-app/main/default/objects/Bill__c/fields/VemoAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>VemoAccountNumber__c</fullName>
    <label>Vemo Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>